<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qualcomm.qti.qca40xx.Activity.WifiOnboardingViaWifiActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        style="@style/textViewStyle"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bleLinearLayoutCredentials"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            style="@style/textViewStyle"
            android:background="@drawable/background_rect"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@style/textViewRowStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/textViewWifiDeviceOBInfo"
                android:textColor="@color/irisBlue"
                android:textSize="@dimen/text_size" />


        </LinearLayout>


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow style="@style/textViewStyle">

                <TextView

                    style="@style/textViewRowStyle"
                    android:text="@string/textViewDeviceName" />

                <TextView
                    android:id="@+id/bleTextViewDeviceName"
                    style="@style/textViewRowStyle" />
            </TableRow>

            <TableRow style="@style/textViewStyle">

                <TextView

                    style="@style/textViewRowStyle"
                    android:text="@string/textViewMacAddress" />

                <TextView
                    android:id="@+id/bleTextViewMacAddress"
                    style="@style/textViewRowStyle" />
            </TableRow>


            <TableRow style="@style/textViewStyle">

                <TextView
                    style="@style/textViewRowStyle"
                    android:text="@string/textViewOnboardingMode" />

                <TextView
                    android:id="@+id/bleTextViewOnboardingMode"
                    style="@style/textViewRowStyle" />
            </TableRow>


        </TableLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bleLinearLayoutCredentials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ble_linear_layout_credentials_margin_bottom"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bleLinearLayoutButtons"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            style="@style/textViewStyle"
            android:layout_marginStart="3dp"
            android:text="@string/textViewSsid"
            android:textColor="@color/irisBlue"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="-63dp" />

        <Spinner
            android:id="@+id/bleSpinnerWifiScanList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/irisBlue"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bleTextViewPassword"
            style="@style/textViewStyle"
            android:layout_marginStart="3dp"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/textViewPassword"
            android:textColor="@color/irisBlue" />

        <EditText

            android:id="@+id/bleEditTextPassword"
            style="@style/textViewStyle"
            android:hint="@string/editTextHintForPassword"
            android:inputType="textPassword"
            android:maxLength="32"
            android:textColorHint="@color/white"
            android:textSize="@dimen/small_text_size" />

        <CheckBox
            android:id="@+id/chk_paswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_paswd" />

    </LinearLayout>


    <LinearLayout

        android:id="@+id/bleLinearLayoutButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/bleBtnCancel"
            style="@style/whiteButtonStyle"
            android:layout_weight="1"
            android:text="@string/buttonCancel"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bleBtnOnboard"
            style="@style/irisBlueButtonStyle"
            android:layout_weight="1"
            android:text="@string/buttonOnBoard"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bleLinearLayoutOnBoarded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/bleImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/on_boarded_image" />

        <TextView
            style="@style/textViewStyle"
            android:gravity="center_horizontal"
            android:text="@string/textViewOnBoardingSuccess"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bleButtonOnBoardOk"
            style="@style/irisBlueButtonStyle"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>







